build_log.txt
Resolving dependencies...
Downloading packages...
  archive 3.6.1 (4.0.9 available)
  file_picker 8.3.7 (11.0.2 available)
  flutter_lints 3.0.2 (6.0.0 available)
  lints 3.0.0 (6.1.0 available)
  matcher 0.12.19 (0.12.20 available)
  meta 1.18.0 (1.18.2 available)
  permission_handler 11.4.0 (12.0.2 available)
  permission_handler_android 12.1.0 (13.0.1 available)
  test_api 0.7.11 (0.7.12 available)
  vector_math 2.2.0 (2.3.0 available)
  win32 5.15.0 (6.3.0 available)
  xml 6.6.1 (7.0.1 available)
Got dependencies!
12 packages have newer versions incompatible with dependency constraints.
Try `flutter pub outdated` for more information.
Running Gradle task 'assembleRelease'...                        
WARNING: Your app uses the following plugins that apply Kotlin Gradle Plugin (KGP): simnumber
Future versions of Flutter will fail to build if your app uses plugins that apply KGP.

Please check the changelogs of these plugins and upgrade to a version that supports Built-in Kotlin.
If no such version exists, report the issue to the plugin. If necessary, here is a guide on filing 
an issue against a plugin: https://docs.flutter.dev/release/breaking-changes/migrate-to-built-in-kotlin/for-app-developers#report-incompatible-kotlin-gradle-plugin-usage-to-plugin-authors

If you are a plugin author, please migrate your plugin to Built-in Kotlin using this guide: https://docs.flutter.dev/release/breaking-changes/migrate-to-built-in-kotlin/for-plugin-authors
Checking the license for package Android SDK Platform 33 in /usr/local/lib/android/sdk/licenses
License for package Android SDK Platform 33 accepted.
Preparing "Install Android SDK Platform 33 (revision 3)".
"Install Android SDK Platform 33 (revision 3)" ready.
Installing Android SDK Platform 33 in /usr/local/lib/android/sdk/platforms/android-33
"Install Android SDK Platform 33 (revision 3)" complete.
"Install Android SDK Platform 33 (revision 3)" finished.
[=========                              ] 25%                                   
Checking the license for package CMake 3.22.1 in /usr/local/lib/android/sdk/licenses
License for package CMake 3.22.1 accepted.
Preparing "Install CMake 3.22.1 v.3.22.1".
"Install CMake 3.22.1 v.3.22.1" ready.
Installing CMake 3.22.1 in /usr/local/lib/android/sdk/cmake/3.22.1
"Install CMake 3.22.1 v.3.22.1" complete.
"Install CMake 3.22.1 v.3.22.1" finished.
Font asset "MaterialIcons-Regular.otf" was tree-shaken, reducing it from 1645184 to 2236 bytes (99.9% reduction). Tree-shaking can be disabled by providing the --no-tree-shake-icons flag when building your app.
/home/runner/.pub-cache/hosted/pub.dev/background_sms-0.0.4/android/src/main/java/com/j/background_sms/BackgroundSmsPlugin.java:17: error: cannot find symbol
import io.flutter.plugin.common.PluginRegistry.Registrar;
                                              ^
  symbol:   class Registrar
  location: interface PluginRegistry
/home/runner/.pub-cache/hosted/pub.dev/background_sms-0.0.4/android/src/main/java/com/j/background_sms/BackgroundSmsPlugin.java:43: error: cannot find symbol
  public static void registerWith(Registrar registrar) {
                                  ^
  symbol:   class Registrar
  location: class BackgroundSmsPlugin
Note: /home/runner/.pub-cache/hosted/pub.dev/background_sms-0.0.4/android/src/main/java/com/j/background_sms/BackgroundSmsPlugin.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':background_sms:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: /home/runner/.pub-cache/hosted/pub.dev/background_sms-0.0.4/android/src/main/java/com/j/background_sms/BackgroundSmsPlugin.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/runner/.pub-cache/hosted/pub.dev/background_sms-0.0.4/android/src/main/java/com/j/background_sms/BackgroundSmsPlugin.java:17: error: cannot find symbol
  import io.flutter.plugin.common.PluginRegistry.Registrar;
                                                ^
    symbol:   class Registrar
    location: interface PluginRegistry
  /home/runner/.pub-cache/hosted/pub.dev/background_sms-0.0.4/android/src/main/java/com/j/background_sms/BackgroundSmsPlugin.java:43: error: cannot find symbol
    public static void registerWith(Registrar registrar) {
                                    ^
    symbol:   class Registrar
    location: class BackgroundSmsPlugin
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 3m 30s
Running Gradle task 'assembleRelease'...                          210.8s
Gradle task assembleRelease failed with exit code 1
